force-app/main/default/objects/Preference__c/Preference__c.object-meta.xml
<CustomObject>
    <label>Preference</label>
    <nameField>
        <label>Preference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Preferences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>