force-app/main/default/objects/Preference__c/fields/General_Preferences__c.field-meta.xml
<CustomField>
    <fullName>General_Preferences__c</fullName>
    <label>General Preferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>