force-app/main/default/objects/Preference__c/fields/Main_Tag__c.field-meta.xml
<CustomField>
    <fullName>Main_Tag__c</fullName>
    <label>Main Tag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tags</valueSetName>
    </valueSet>
</CustomField>