force-app/main/default/objects/Preference__c/fields/Preferences_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferences_Name__c</fullName>
    <formula>Contact__r.FirstName + &apos; &apos; + Contact__r.LastName  + &apos;-&apos; + TEXT(Main_Tag__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferences Name</label>
    <type>Text</type>
</CustomField>