force-app/main/default/objects/Preference__c/fields/Sub_Tags__c.field-meta.xml
<CustomField>
    <fullName>Sub_Tags__c</fullName>
    <label>Sub Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Main_Tag__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Tags</valueSetName>
    </valueSet>
</CustomField>